--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@kinde-oss/kinde-auth-react": "^4.0.4",
+    "firebase": "^11.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
